@@ -77,7 +77,7 @@ information. This option runs \fBsvctool\fR(8) and requires root privilegs.
 error check mode. Show file in the control directory which shouldn't be there
 
 .TP
-\fB\-e\fR
+\fB\-E\fR
 Show environment variables inherited from $HOME/.defaultqueue
 
 .TP
